fix(ui): gap at top of page in tablet mode (#8885)
Due to a non-integer pixel height.

Also fixes cropped icons in article actions menu for the same reason.

--- a/client/src/ui/molecules/theme-switcher/index.scss
+++ b/client/src/ui/molecules/theme-switcher/index.scss
@@ -70,6 +70,8 @@
 .theme-switcher-menu,
 .languages-switcher-menu {
   > .button {
+    display: block;
+
     .button-wrap:after {
       background-color: var(--icon-secondary);
       content: "";
